--- a/app/src/main/res/layout/activity_formular04.xml
+++ b/app/src/main/res/layout/activity_formular04.xml
@@ -46,15 +46,15 @@
         android:indeterminate="false" />
 
     <TextView
-        android:text="Ihre Reisedokumente"
-        android:layout_width="wrap_content"
+        android:text="Ihr Reisedokument (bei Fremden)"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
-        android:textAlignment="center"
+        android:textSize="34sp"
         android:id="@+id/textView_reisedokumente"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:textAlignment="center" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -62,10 +62,11 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/editText_art"
-        android:hint="Art:"
+        android:hint="Art (z.B. Reisepass, ...)"
         android:layout_alignBottom="@+id/editText_rdNr"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="44dp" />
+        android:layout_marginBottom="44dp"
+        android:layout_toStartOf="@+id/button_weiter" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -73,20 +74,11 @@
         android:ems="10"
         android:layout_marginTop="114dp"
         android:id="@+id/editText_rdNr"
-        android:hint="Nr:"
+        android:hint="Nummer"
         android:layout_below="@+id/textView_reisedokumente"
         android:layout_alignParentStart="true"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/editText_ausstellungsdatum"
-        android:hint="Ausstellungsdatum:"
-        android:layout_below="@+id/editText_art"
-        android:layout_alignParentStart="true"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignEnd="@+id/editText_art" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -96,6 +88,18 @@
         android:layout_below="@+id/editText_ausstellungsdatum"
         android:layout_alignParentStart="true"
         android:id="@+id/editText_behoerde"
-        android:hint="Auszustellende Behörde:" />
+        android:hint="ausstellende Behörde, Staat"
+        android:layout_alignEnd="@+id/editText_ausstellungsdatum" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/editText_ausstellungsdatum"
+        android:hint="Ausstellungsdatum"
+        android:inputType="textPersonName"
+        android:layout_below="@+id/editText_art"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/editText_rdNr" />
 
 </RelativeLayout>
