--- a/app/src/main/res/layout/activity_formular09.xml
+++ b/app/src/main/res/layout/activity_formular09.xml
@@ -11,19 +11,6 @@
     tools:context="at.fh.swengb.resifo_android.Formular09Activity">
 
 
-    <TextView
-        android:text="Ziehen Sie aus dem Ausland?"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/button_weiter"
-        android:layout_alignParentEnd="true"
-        android:textSize="40sp"
-        android:textAlignment="center"
-        android:id="@+id/textView_ausland" />
-
-
     <Button
         android:text="Zurück"
         android:layout_width="wrap_content"
@@ -45,19 +32,8 @@
         android:layout_alignParentStart="true"
         android:visibility="visible"
         android:max="88"
-        android:progress="64"
+        android:progress="48"
         android:indeterminate="false" />
-
-    <Button
-        android:text="JA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="57dp"
-        android:id="@+id/button_ja"
-        android:textAlignment="center"
-        android:onClick="auslandYes"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
 
     <Button
         android:text="NEIN"
@@ -70,5 +46,27 @@
         android:layout_alignBaseline="@+id/button_ja"
         android:layout_alignBottom="@+id/button_ja"
         android:layout_toEndOf="@+id/button_ja" />
+
+    <Button
+        android:text="JA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:id="@+id/button_ja"
+        android:textAlignment="center"
+        android:onClick="auslandYes"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Zuzug aus dem Ausland?"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:id="@+id/textView_ausland"
+        android:textAlignment="center"
+        android:layout_above="@+id/button_nein"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="56dp" />
 
 </RelativeLayout>
