Improve a few layouts & fix typos

--- a/app/src/main/res/layout/activity_formular10.xml
+++ b/app/src/main/res/layout/activity_formular10.xml
@@ -131,11 +131,11 @@
                 tools:text="Ausstellungsdatum:" />
 
             <TextView
-                android:text="Ausstellende Behörde:"
+                android:text="ausstellende Behörde:"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView_ausstellendeBehoerde"
-                tools:text="Ausstellende Behörde:" />
+                tools:text="ausstellende Behörde:" />
 
             <TextView
                 android:text="Anmeldung der Unterkunft in:"
