--- a/app/src/main/res/layout/simple_list_item_regform.xml
+++ b/app/src/main/res/layout/simple_list_item_regform.xml
@@ -1,28 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="5dp">
 
-
-    <TextView
-        android:text="Übersicht der Meldezettel"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textViewRegForm"
-        android:textStyle="normal|bold"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="Übersicht der Meldezettel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewRegForm"
+            android:textStyle="normal|bold"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:id="@+id/textView_topline"
+            android:background="@android:color/darker_gray"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="1" />
+    </LinearLayout>
+
     <ListView
         android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@android:id/list"
-        android:textStyle="normal|bold"
-        android:textSize="16sp" />
+        android:textStyle="normal"
+        android:textSize="14sp" >
+
+    </ListView>
 
 </LinearLayout>
 
